# clerr

./: CONTRIBUTING.md  Cargo.toml  ISSUES.md  README.md
.github/workflows/: build.yml
src/: code.rs  lib.rs  report.rs  severity.rs
src/report/: entry.rs  mod.rs  properties.rs  report.rs  token_info.rs  util.rs
src/text_file/: mod.rs  token_info.rs
