[package]
name = "clerr"
version = "0.10.0-rc.2"
description = "This library aids in command-line error reporting."
readme = "README.md"
repository = "https://github.com/nikdeapen/clerr"
homepage = "https://github.com/nikdeapen/clerr"
authors = ["Nik Deapen <nik@deapen.com>"]
edition = "2024"
license = "MIT"
keywords = ["cli", "error", "report", "colored"]
categories = ["command-line-interface"]

[dependencies]
colored = "3"
