[package]
name = "clerr"
version = "0.10.0-rc.3"
description = "This library aids in command-line error reporting."
keywords = ["cli", "error", "report", "log", "terminal"]
categories = ["command-line-interface", "development-tools::debugging"]
readme = "README.md"
repository = "https://github.com/nikdeapen/clerr"
homepage = "https://github.com/nikdeapen/clerr"
authors = ["Nik Deapen <nik@deapen.com>"]
edition = "2024"
license = "MIT"

[dependencies]
colored = "3"
