[package]
name = "clerr"
version = "0.11.0-rc.3"
description = "This library aids in command-line error reporting."
readme = "README.md"
repository = "https://github.com/nikdeapen/clerr"
homepage = "https://github.com/nikdeapen/clerr"
authors = ["Nik Deapen <nik@deapen.com>"]
edition = "2024"
license = "MIT"

[dependencies]
colored = "3"
unicode-width = "0.2"
